# gbtask

./: Makefile  README.md  pyproject.toml
.github/workflows/: pytest.yaml
doc/: Makefile  README.tpl.md  ex1.gb  ex2.gb  example.gb  example_add1.sh  example_add2.sh  example_cat.sh  example_geneify.sh  example_splice.sh  example_togff.sh  example_togtf.sh  geneified.gb  geneify_help.sh  modify_help.sh  plot_typetree.py  splice_help.sh  togff_help.sh  togtf_help.sh
src/gbtask/: __main__.py  cli.py
src/gbtask/geneify/: cli.py  geneify.py  infer.py
src/gbtask/modify/: cli.py  modify.py
src/gbtask/splice/: cli.py  splice.py
src/gbtask/tofasta/: cli.py
src/gbtask/togxf/: GXFConverter.py  cli.py
src/gbtask/utils/: FeatureGraph.py  FeatureGroups.py  FeatureHierarchy.py  FeatureIDManager.py  TypeTree.py  futils.py
tests/: __init__.py  helpers.py  integration.py  test_FeatureGroups.py  test_FeatureHierarchy.py  test_FeatureIDManager.py  test_GXFConverter.py  test_TypeTree.py  test_futils.py  test_geneify_integration.py  test_infer.py  test_modify_integration.py  test_splice.py  test_splice_integration.py  test_togxf_integration.py
tests/resources/: bare_gbk.gb
tests/resources/integration_geneify/: test01_input.gb  test01_output.gb  test02_input.gb  test02_output.gb  test03_output.gb  test04_input.gb  test04_output.gb
tests/resources/integration_modify/: test01_output.gb  test02_output.gb  test03_input.gb  test03_output.gb  test04_input.gb  test04_output.gb  test05_input.gb  test05_output.gb
tests/resources/integration_splice/: test01_input.gb  test01_output.gb  (+2 more)
(+2 files in other folders)
